@@ -37,6 +37,9 @@
 #ifdef ZTS
 #include "TSRM.h"
 #endif
+#ifdef HAVE_SYS_TIME_H
+#include <sys/time.h>
+#endif
 
 #include "rfc1867.h"
 
@@ -860,7 +863,6 @@ SAPI_API struct stat *sapi_get_stat(TSRMLS_D)
 	}
 }
 
-
 SAPI_API char *sapi_getenv(char *name, size_t name_len TSRMLS_DC)
 {
 	if (sapi_module.getenv) {
@@ -907,6 +909,15 @@ SAPI_API int sapi_get_target_gid(gid_t *obj TSRMLS_DC)
 	}
 }
 
+SAPI_API time_t sapi_get_request_time(TSRMLS_D)
+{
+	if (sapi_module.get_request_time) {
+		return sapi_module.get_request_time(TSRMLS_C);
+	} else {
+		if(!SG(global_request_time)) SG(global_request_time) = time(0);
+		return SG(global_request_time);
+	}
+}
 
 /*
  * Local variables:
